feat: Introduce foundational community and governance documents
- Added CODE_OF_CONDUCT.md to establish community standards and expectations for behavior.
- Created GOVERNANCE.md to outline project stewardship, decision-making processes, and contributor expectations.
- Introduced SECURITY.md detailing the security policy and reporting procedures for vulnerabilities.
- Added SUPPORT.md to provide guidance on obtaining help and resources for users.
- Updated README.md to include links to new documentation for community health and governance.
- Established constraints.txt for dependency management in development and CI workflows.
- Enhanced documentation with new API references for CLI, plugins, serialization, and visualization.

--- a/.github/workflows/deprecation-check.yml
+++ b/.github/workflows/deprecation-check.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -c "import pathlib, subprocess, sys; req = pathlib.Path('requirements.txt'); subprocess.run([sys.executable, '-m', 'pip', 'install', '-r', str(req)], check=True) if req.exists() else None"
-          python -m pip install pytest pytest-cov
+          python -c "import pathlib, subprocess, sys; req = pathlib.Path('requirements.txt'); subprocess.run([sys.executable, '-m', 'pip', 'install', '-r', str(req), '-c', 'constraints.txt'], check=True) if req.exists() else None"
+          python -m pip install pytest pytest-cov -c constraints.txt
 
       - name: Run deprecation-sensitive tests
         env:
