--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r docs/requirements-doc.txt
-          pip install .[notebooks,viz,lime,eval]
+          pip install -r docs/requirements-doc.txt -c constraints.txt
+          pip install .[notebooks,viz,lime,eval] -c constraints.txt
 
       - name: Build documentation (HTML)
         run: |
