--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install tooling
         run: |
           python -m pip install --upgrade pip
-          python -m pip install .[dev]
+          python -m pip install .[dev] -c constraints.txt
       - name: Ruff naming enforcement (ADR-017)
         run: |
           ruff check --select N
