--- a/.github/workflows/scan-private-members.yml
+++ b/.github/workflows/scan-private-members.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          if [ -f requirements.txt ]; then pip install -r requirements.txt -c constraints.txt; fi
       - name: Run private-member scan
         run: |
           python scripts/anti-pattern-analysis/scan_private_usage.py --check
