ci: Refactor and enhance codebase with various improvements
- Updated private member allowlist to include new entries and ensure proper formatting.
- Modified dependency audit workflow to ignore specific vulnerabilities until patched.
- Added a new ROADMAP document for project planning and tracking.
- Enhanced documentation configuration to skip certain notebooks when pandoc is unavailable.
- Revised anti-pattern remediation plan to improve clarity and structure.
- Updated index documentation to reference the new ROADMAP.
- Improved import graph checking script to include legacy plugins.
- Refactored CalibratedExplainer methods for consistency in parameter naming.
- Added detailed docstrings to helper functions for better understanding.
- Introduced validation logic for prediction orchestration.
- Enhanced plotting module to handle optional dependencies more gracefully.
- Updated tests to ensure compatibility with recent changes and improve coverage.
- Added new tests for PlotKindRegistry and validation of PlotSpec.

--- a/.github/workflows/dependency-audit.yml
+++ b/.github/workflows/dependency-audit.yml
@@ -26,4 +26,5 @@ jobs:
 
       - name: Run dependency audit
         run: |
-          pip-audit -r requirements.txt -r docs/requirements-doc.txt
+          # GHSA-xm59-rqc7-hhvf has no fixed nbconvert release yet; ignore until patched.
+          pip-audit -r requirements.txt -r docs/requirements-doc.txt --ignore-vuln GHSA-xm59-rqc7-hhvf
